RM:  Move workaround into base script and adjust action test suite to work with gradle
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@49384 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261